
HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.6.x
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.x

Fixes:
- get_value: fixed issue where bools were registered as ints

-----------------------------------------------------------------------
 VERSION 0.6.5
-----------------------------------------------------------------------

Fixes:
- docs:         fixed outdated built in docs #329
- stub:         updated stub file
- shade series: y2 is now keyword only
- image series: fixed crash

-----------------------------------------------------------------------
 VERSION 0.6.0
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.0

Updates:
- Implot: updated to v0.8

Breaking Changes:
- Plotting API: data input separated, [x1, x2, ...] and [y1, y2, ...]
                vs [[x1, y1], [x2, y2], ...]
- Drawing API:  Removed "set_drawing_origin"
- Drawing API:  Removed "set_drawing_scale"
- Drawing API:  Removed "get_drawing_origin"
- Drawing API:  Removed "get_drawing_scale"
- Drawing API:  Y axis is down now.
- Drawing API:  Origin is top left corner now.
- Drawing API:  pmax keyword in "draw_image" is now required.
- Drawing API:  changed "delete_drawing_item" with
                "delete_drawing_command".

New Features:
- Drawing API:  Can now drawing to window using window name
- Drawing API:  Can now draw to viewport using "##FOREGROUND" and
                "##BACKGROUND" as the draw target
- Style API:    Can now apply style per widget
- Style API:    Can now clear style per widget
- Simple Table: Now alternates colors

New Commands:
- Style API:   Added "set_item_style_var" command