@@ -29,7 +29,8 @@ HOW TO UPDATE?
 Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.x
 
 Fixes:
-- get_value: fixed issue where bools were registered as ints
+- get_value:     fixed issue where bools were registered as ints
+- value_storage: fixed crashing issue with conflicting types/names
 
 -----------------------------------------------------------------------
  VERSION 0.6.5
